--- a/webserver/html/index.html
+++ b/webserver/html/index.html
@@ -234,8 +234,8 @@
                 <div class="card-body">
                     <form>
                         <div class="form-group">
-                            <label for="sell-stock">Stock Symbol</label>
-                            <input type="stock-name" class="form-control" id="sell-stock" placeholder="Stock Symbol">
+                            <label for="quote-stock">Stock Symbol</label>
+                            <input type="stock-name" class="form-control" id="quote-stock" placeholder="Stock Symbol">
                         </div>
                         <button type="submit" onclick="quote()" class="btn btn-primary">Submit</button>
                     </form>
