--- a/webserver/html/index.html
+++ b/webserver/html/index.html
@@ -267,7 +267,7 @@
               <!-- Project Card Example -->
                 <div class="card shadow mb-4">
                   <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">TRIGGERS</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">PREFERENCES</h6>
                   </div>
                   <div class="card shadow mb-4">
                     <div class="card-body">
@@ -390,6 +390,18 @@
                                     </div>
                                     <button type="submit" onclick="cancel_set_sell()" class="btn btn-primary">Submit</button>
                                 </form>
+                              </div>
+                            </div>
+                            <!-- CANCEL SET SELL -->
+                            <div class="card shadow mb-4">
+                              <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                <h6 class="m-0 font-weight-bold text-primary">LOG FILE</h6>
+                              </div>
+                              <!-- Card Body -->
+                              <div class="card-body">
+                                <form class="text-center">
+                                  <button type="submit" onclick="create_user_log()" class="btn btn-primary mt-2 mb-2">Create User Log</button>
+                              </form>
                               </div>
                             </div>
                           </div>
@@ -610,6 +622,13 @@
         command = command.concat("CANCEL_SET_SELL,", username, ",", stock_name);
         alert(command);
       }
+    }
+
+    function create_user_log(){
+      var username = sessionStorage.getItem('username');
+      var command = "";
+      command = command.concat("DUMPLOG,", username, ",userLOG");
+      alert(command);
     }
 
     // Check if stock_symbol is 1-3 characters, and only contains letters.
