--- a/webserver/html/index.html
+++ b/webserver/html/index.html
@@ -144,6 +144,19 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
+          <div class="col-xl-14">
+              <!-- Illustrations -->
+              <div class="card shadow mb-4">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-primary">OVERVIEW</h6>
+                </div>
+                <div class="card-body">
+                </div>
+              </div>
+            </div>
+
+
+
           <!-- FIRST ROW -->
           <div class="row">
             <!-- FIRST COLUMN -->
@@ -409,18 +422,6 @@
                 </div>
               </div>
             </div>
-
-          <div class="col-lg-12 mb-4">
-            <!-- Illustrations -->
-            <div class="card shadow mb-4">
-              <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">OVERVIEW</h6>
-              </div>
-              <div class="card-body">
-              </div>
-            </div>
-          </div>
-
       </div>
       <!-- /.container-fluid -->
 
