--- a/webserver/html/login.html
+++ b/webserver/html/login.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-gradient-primary" style="vertical-align: middle; height: 100%">
 
   <div class="container">
 
