--- a/webserver/html/login.html
+++ b/webserver/html/login.html
@@ -46,7 +46,7 @@
                     <div class="form-group">
                       <input type="password" class="form-control form-control-user" id="input-password" placeholder="Password">
                     </div>
-                    <a href="index.html" onclick="login()" class="btn btn-primary btn-user btn-block">
+                    <a href="#" onclick="login()" class="btn btn-primary btn-user btn-block">
                       Login
                     </a>
                     <hr>
@@ -79,7 +79,13 @@
             command = command.concat("ADD,", username, ",0");
             sessionStorage.getItem('username');
             sessionStorage.setItem('username', username);
-            window.location.replace("dashboard.html");
+            payload = {
+              "username": username,
+              "command": command
+            }
+            $.post('transaction-server:5000/api',payload,()=>{
+              window.location.replace("index.html");
+            })
         }
     }
 
