Setup Jaime to waste her time as well

--- a/webserver/html/login.html
+++ b/webserver/html/login.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="css/sb-admin-2.min.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -76,14 +76,14 @@
         var username = document.getElementById("input-username").value;
         var command = "";
         if(check_stock_name(username)){
-            command = command.concat("ADD,", username, ",0");
+            command = command.concat("ADD,", username, ",0.00");
             sessionStorage.getItem('username');
             sessionStorage.setItem('username', username);
             payload = {
               "username": username,
               "command": command
             }
-            $.post('transaction-server:5000/api',payload,()=>{
+            $.post('/api',JSON.stringify(payload),()=>{
               window.location.replace("index.html");
             })
         }
